src/scss/components/_header.scss
.c-header {
  line-height: 1;

  &__container {
    padding: 0;

    @media (min-width: $bp-unstack-nav) {
      padding: 0 1.75rem;
      height: auto !important;
    }
  }

  &__intro {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.75rem;
    height: 14.25vh;

    & img {
      width: 55%;
    }

    @media (min-width: $bp-sm) {
      & img {
        width: 60%;
      }
    }

    @media (min-width: $bp-unstack-nav) {
      justify-content: center;
      height: auto;

      & img {
        width: 75%;
      }
    }

    @media (min-width: $bp-md) {
      padding: 1.375rem 0;

      & img {
        width: 100%;
      }
    }
  }

  &__nav {
    position: absolute;
    height: 85.75vh;
    top: 14.25vh;

    @media (min-width: $bp-unstack-nav) {
      position: relative;
      height: auto !important;
      text-align: center;
      padding-bottom: 0.5rem;
      transition: unset;
      top: 0;
    }

    @media (min-width: $bp-md) {
      text-align: right;
      padding-bottom: 0;
    }

    &.expand-nav.hide-nav {
      left: 0;
      overflow: visible !important;
    }

    &.hide-nav { // delayed via JS for animation to complete
      overflow: hidden;
    }
  }

  &__list {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    list-style-type: none;
    padding: 0;
    margin: 0;
    height: 100%;
    position: relative;

    &[aria-hidden="true"] {

      & .c-header__item--discover,
      & .c-header__item--about,
      & .c-header__item--sell {
        left: 100vw;
      }
    }

    @media (min-width: $bp-unstack-nav) {
      flex-direction: row;
      margin: 1rem 0;
      height: auto;
    }

    @media (min-width: $bp-md) {
      justify-content: flex-end;
      padding-left: 1rem;
    }
  }

  &__anchor {
    display: flex;
    width: 100%;
    text-decoration: none;

    &:hover,
    &:active {
      .c-header__animal--bear,
      .c-header__animal--cow,
      .c-header__animal--elephant {
        transform: translateX(-3px);
      }
    }
  }

  &__item {
    display: flex;
    position: absolute;
    width: 100vw;
    height: 33.333%;

    @media (min-width: $bp-unstack-nav) {
      padding-right: 5vw;
      padding-bottom: 0;
      width: auto;
      height: auto;
      position: relative;
      transition: transform 150ms ease-in;
    }

    @media (min-width: $bp-md) {
      padding-right: 3vw;
    }

    @media (min-width: $bp-lg) {
      padding-right: 4.5vw;
    }

    @media (min-width: $bp-xl) {
      padding-right: 6vw;
    }

    &:hover {
      @media (min-width: $bp-unstack-nav) {
        transform: translateY(2px);
      }

      @media (min-width: $bp-md) {
        transform: translateY(3px);
      }
    }

    &:last-of-type {
      @media (min-width: $bp-unstack-nav) {
        padding: 0;
      }
    }

    &--discover {
      background-color: $c-soft-grey;
      top: 0;
      left: 0;

      &.discover-show {
        transition: left 400ms ease-in-out;
      }

      &.discover-hide {
        transition: left 400ms ease-in-out 600ms;

        @media (min-width: $bp-unstack-nav) {
          transition: unset;
        }
      }

      @media (min-width: $bp-unstack-nav) {
        background-color: transparent;
        transition: unset;
      }
    }

    &--about {
      background-color: $c-pretty-in-pink;
      left: 0;

      &.about-show {
        transition: left 400ms ease-in-out 300ms;
      }

      &.about-hide {
        transition: left 400ms ease-in-out 300ms;

        @media (min-width: $bp-unstack-nav) {
          transition: unset;
        }
      }

      @media (min-width: $bp-unstack-nav) {
        background-color: transparent;
        transition: unset;
      }
    }

    &--sell {
      background-color: $c-ocean;
      bottom: 0;
      left: 0;

      &.sell-show {
        transition: left 400ms ease-in-out 600ms;
      }

      &.sell-hide {
        transition: left 400ms ease-in-out;

        @media (min-width: $bp-unstack-nav) {
          transition: unset;
        }
      }

      @media (min-width: $bp-unstack-nav) {
        background-color: transparent;
        transition: unset;
      }
    }
  }

  &__text {
    @include font-stack-primary($weight: 700);
    align-self: center;
    color: $c-charcoal;
    font-size: 1.5rem;
    text-transform: uppercase;
    text-decoration: none;
    position: absolute;
    padding: 0 3.5rem 0 0.75rem;
    margin: auto;
    line-height: 1.25;
    right: -50%;
    width: 50%;

    &--discover.discover-text-show {
      right: 0;
      transition: right 600ms ease-in-out;
    }

    &--discover.discover-text-hide {
      transition: right 600ms ease-in-out 600ms;
    }

    &--about.about-text-show {
      right: 0;
      transition: right 600ms ease-in-out 300ms;
    }

    &--about.about-text-hide {
      transition: right 600ms ease-in-out 300ms;
    }

    &--sell.sell-text-show {
      right: 0;
      transition: right 600ms ease-in-out 600ms;
    }

    &--sell.sell-text-hide {
      transition: right 600ms ease-in-out;
    }

    @media (min-width: $bp-unstack-nav) {
      flex-basis: 100%;
      font-size: 1rem;
      padding: 0;
      position: relative;
      right: 0;

      // let's add a nice transition to the arrow icon
      &::before {
        content: '';
        color: $c-white;
        opacity: 0;
        transition: opacity 300ms ease-in;
      }

      &:hover {
        &::before {
          content: '\276F';
          color: $c-froggy-yellowgreen;
          opacity: 1;
          transform: rotate(90deg) scale(1.25);
          position: absolute;
          top: 85%;
          right: 50%;
        }
      }
    }

    @media (min-width: $bp-lg) {
      font-size: 1.125rem;
    }
  }

  &__menu-btn {
    max-height: 2.25rem;
    margin-left: 1rem;

    @media (min-width: $bp-unstack-nav) {
      display: none;
    }
  }

  &__animal {
    flex-basis: 50%;
    transform: translateX(0);
    transition: transform 300ms ease;

    &--bear {
      background: no-repeat top 30% right -15% / 155%;
      background-image: url(/images/bear.png);

      @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 220dpi) {
        background-image: url(/images/bear2x.png);
      }
    }

    &--cow {
      background: no-repeat top 4% right 38% / 120%;
      background-image: url(/images/cow.png);

      @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 220dpi) {
        background-image: url(/images/cow2x.png);
      }
    }

    &--elephant {
      background: no-repeat top 30% right / 148%;
      background-image: url(/images/elephant.png);

      @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 220dpi) {
        background-image: url(/images/elephant2x.png);
      }
    }

    @media (min-width: $bp-unstack-nav) {
      display: none;
    }
  }
}

